tests/compile-fail/suzu_bare.stderr
error: #[suzu] requires arguments, e.g., #[suzu(location)] or #[suzu(display("..."))]
 --> tests/compile-fail/suzu_bare.rs:6:5
  |
6 |     #[suzu]
  |     ^
